# nonebot-plugin-wordcloud

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  codecov.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  feature_request.md
.github/workflows/: codecov.yml  copilot-setup-steps.yml  release-draft.yml  release.yml
nonebot_plugin_wordcloud/: SourceHanSans.LICENSE.txt  __init__.py  analyzer.py  compat.py  config.py  data.py  data_source.py  migrate.py  model.py  permissions.py  schedule.py  stopwords.txt  utils.py
nonebot_plugin_wordcloud/migrations/: 2741a36d9182_map_target.py  2c81885ebe94_add_schedule_mode.py  40af70fe5409_add_schedule_period_options.py  4f1a6b35e888_migrate_target.py  557fef3a156f_init_db.py  80857cd51ec7_remove_target.py  9af63132d74a_add_schedule_type.py  ade8cdca5470_migrate_datastore_data.py  c0ecb94cc7a0_remove_bot_id_platform_et_al.py  db81e06df0ed_make_target_non_nullable.py  dc39d67fb62e_add_target.py  e594c73f4e1d_add_session_persist_id.py  ee2869aa7c5a_init_db.py  f26008eae177_alter_not_null.py  f77200370a39_ob12.py
nonebot_plugin_wordcloud/processors/: base.py  hanlp_restful.py  jieba.py  sanitizer.py
nonebot_plugin_wordcloud/tokenizer/: __init__.py  base.py  hanlp_restful.py  jieba.py
tests/: conftest.py  test_analyzer.py  test_colormap.py  test_config.py  test_hanlp.py  test_masked.py  test_migrate.py  test_migrations.py  test_permission.py  test_pre_process.py  test_process.py  test_save_message.py  test_schedule.py  test_stopwords.py  test_timezone.py  test_usage.py  test_userdict.py  test_word_cloud.py  test_wordcloud.py  utils.py
tests/__snapshots__/: test_process.ambr
tests/mock/: migrate_test.db
